I tried to make a pic clickable

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
      -->
     <div class="container text-center">
       <h1>RPS GAME</h1>  
-      <img id="rock" src="https://media-exp2.licdn.com/mpr/mpr/AAEAAQAAAAAAAAdXAAAAJDZjODljMzc3LTI3NTEtNDY3Ny1iMjlhLTM4MzgzZTU0MzczNQ.png">
-      <img id="paper" src="https://yt3.ggpht.com/-WEAc8bRRSGA/AAAAAAAAAAI/AAAAAAAAAAA/4JgXyolG0hI/s900-c-k-no-mo-rj-c0xffffff/photo.jpg">
-      <img id="scissors" src="https://images-na.ssl-images-amazon.com/images/I/31qoep0yRhL._SY355_.jpg"> 
+      <img class="rock" src="https://media-exp2.licdn.com/mpr/mpr/AAEAAQAAAAAAAAdXAAAAJDZjODljMzc3LTI3NTEtNDY3Ny1iMjlhLTM4MzgzZTU0MzczNQ.png">
+      <img class="paper" src="https://yt3.ggpht.com/-WEAc8bRRSGA/AAAAAAAAAAI/AAAAAAAAAAA/4JgXyolG0hI/s900-c-k-no-mo-rj-c0xffffff/photo.jpg">
+      <img class="scissors" src="https://images-na.ssl-images-amazon.com/images/I/31qoep0yRhL._SY355_.jpg"> 
+      <img class="gun-shoot" src="https://acc-cdn.azureedge.net/accliveimages/0001497_357-magnum-dummy-gun_550.jpeg">
       <button id="click" type="button">CLick Me!</button>
     
     
